--- a/addGood.html
+++ b/addGood.html
@@ -34,7 +34,7 @@
         </div>
         <div class="ifo price">
             <h3 class="title">商品价格</h3>
-            <input  class="input" type="number">
+            <input  class="input" type="text">
         </div>
         <div class="ifo type">
             <h3 class="title">商品类别</h3>
