--- a/main.html
+++ b/main.html
@@ -129,7 +129,7 @@
     <div class="detialed-b">
         <div class="arrange container">
             <div class="title">
-                箱靴鞋帽
+                鞋靴箱帽
             </div>
             <div class="section">
                 <img src="/img/100x100.png" class="photo">
