--- a/main.html
+++ b/main.html
@@ -92,10 +92,10 @@
     <div class="sec-ad">
     <div class="container">
         <div class="ad-a section">
-            <img src="/img/ad1.jpg" class="ad-pho ad-1">
+            <img src="/img/5bffa740Ncd3cb80e.jpg" class="ad-pho ad-1">
         </div>
         <div class="ad-b section">
-            <img src="/img/ad2.jpg" class="ad-pho ad-2">
+            <img src="/img/ad1.jpg" class="ad-pho ad-2">
         </div>
         <div class="ad-c section">
             <img src="/img/ad4.jpg" class="ad-pho ad-3">
