--- a/login.html
+++ b/login.html
@@ -38,12 +38,42 @@
     </div>    
     </div>
     <script>
+        //主页显示
+        var logo = $(".logo");
+        //console.log(logo);
+        logo.on("mouseover",function(){
+            //$(".logo").hide();
+            //$(".logo2").fadeIn("slow");
+            $(".logo")[0].src = "/img/home2.png";
+            //console.log($(".logo")[0]);
+        })
+        logo.on("mouseout",function(){
+            //$(".logo2").hide();
+            //$(".logo").fadeIn("slow");
+            $(".logo")[0].src = "/img/logo.png";
+        })
+
+        //回主页
+        logo[0].onclick = function (){
+            window.location.href = "/main.html";
+        }
+
+        //登入部分
         window.onload = function(ev){
             var btn = document.querySelector(".btn");
             //console.log(btn);
         btn.onclick = function(){
             var name = $(".username").val();
             var password = $(".password").val();
+            //console.log(name);
+            if(name===""){
+                alert("请输入账号");
+                return;
+            }
+            if(password===""){
+                alert("请输入密码");
+                return;
+            }
             //console.log("username="+name+"&password="+password);
             $.ajax({
                 url : "php_files/logincheck.php",
@@ -55,12 +85,13 @@
                     {
                         addCookie("username",name,5);
                         window.location.href = "/main.html";
-                    }
-                    if(msg === name)
+                    }else if(msg === name)
                     {
                         addCookie("username",name,5);
                         window.location.href = "/main.html";
-                    }  
+                    }else{
+                        alert(msg);
+                    }
                 },
                 error : function (param) {
                     alert(param.status);
