--- a/register.html
+++ b/register.html
@@ -43,6 +43,26 @@
         </div>
     </div>
     <script>
+        //主页显示
+        var logo = $(".logo");
+        //console.log(logo);
+        logo.on("mouseover",function(){
+            //$(".logo").hide();
+            //$(".logo2").fadeIn("slow");
+            $(".logo")[0].src = "/img/home2.png";
+            //console.log($(".logo")[0]);
+        })
+        logo.on("mouseout",function(){
+            //$(".logo2").hide();
+            //$(".logo").fadeIn("slow");
+            $(".logo")[0].src = "/img/logo.png";
+        })
+
+        //回主页
+        logo[0].onclick = function (){
+            window.location.href = "/main.html";
+        }
+        //注册
         var btn = $(".submit")[0];
         //console.log(btn);
         btn.onclick = function(){
